--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
             background-size: cover;
             background-position: fixed;
         }
+        .logo a{
+            text-decoration: none;
+            color: green;
+        }
 
         .logo{
-            font-family: cursive;
             text-align: center;
-            color: white;
-            font-size: 25px;
-            font-weight: bolder;
+            padding: 14px 16px;
+            font-size: 20px;
+
         }
         header {
             font-family: monospace;
@@ -28,7 +31,7 @@
             margin: 0;
         }
         nav ul li {
-            display: inline;
+            display: inline-block;
             margin-right: 20px;
         }
         nav ul li a {
@@ -45,4 +48,14 @@
         h0 {
             text-align: center;
             font: ;
+        }
+
+        .about a{
+            text-decoration: none;
+            color: black;
+        }
+
+        .about{
+            float: left;
+            
         }
