--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-        body {
+        body ,html{
             font-family: Arial, sans-serif;
             background-image: url('background.jpg');
             background-repeat: no-repeat;
@@ -45,10 +45,6 @@
         nav ul li a:hover {
             background-color: #555;
         }
-        h0 {
-            text-align: center;
-            font: ;
-        }
 
         .about a{
             text-decoration: none;
@@ -56,6 +52,17 @@
         }
 
         .about{
-            float: left;
+            float: right;
             
+        }
+
+
+
+
+        /* Add Product Style*/
+
+
+        .form_container{
+            background-color: #f0f0f0;
+            font-size: 90px;
         }
