--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: fixed;
+
         }
         .logo a{
             text-decoration: none;
@@ -49,10 +50,11 @@
         .about a{
             text-decoration: none;
             color: black;
+            display: flex;
         }
 
         .about{
-            float: right;
+            float: left;
             
         }
 
@@ -64,5 +66,64 @@
 
         .form_container{
             background-color: #f0f0f0;
-            font-size: 90px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 50%;
+            margin: 0 auto;
+            flex-direction: column;
+
+        }
+        /*form alignment*/
+
+        .add_food{
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            padding: 20px;
+            align-content: center;
+            align-items: center;
+            gap: 20px;
+        }
+
+        /*form syling*/
+
+        .add_food{
+
+        }
+
+        input[type=text], input[type=number]{
+            width: 80%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=file]{
+            width: 80%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border-radius: 4px;
+            box-sizing: border-box;
+
+        }
+
+        input[type=submit]{
+            width: 50%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover{
+            background-color: #45a049;
         }
