Added functionality to add food page and cart page. Modified index page, added feedback form. Moved add food form from index to add food page

--- a/style.css
+++ b/style.css
@@ -57,7 +57,13 @@
             float: left;
             
         }
-        
+        h1.ab {
+            border-style: solid;
+        }
+
+        footer {
+            text-align: center;
+        }
 
 
 
