--- a/style.css
+++ b/style.css
@@ -135,3 +135,21 @@
             background-color: #45a049;
         }
 
+
+
+
+        /*tb table*/
+
+        .tb_container{
+            background-color: #f0f0f0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+            margin: 0 auto;
+            flex-direction: column;
+        }
+
+
+
